src/tests/ci/assignment_6_advanced_features/invalid_semantic/10_union_pointer_assignment_type.c
union Value {
    int i;
    char* text;
};

int main() {
    union Value v;

    v.i = "hello";

    return 0;
}